# etaLife

./: .gitignore  LICENSE  build.gradle  gameoflife.cabal  settings.gradle
frame/: build.gradle
frame/src/main/java/pl/setblack/etalife/: LifeWindow.java
src/main/eta/: LifeB.hs  LifeJ.hs  LifeRules.hs  Main.hs
