--This is alternative build file for etlas (eta version of cabal)
--Run it with
--etlas instal
--etlas run



-- The name of the package.
name:                gameoflife

-- The package version (i.e. 1.2.3.4).
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              jarekratajski

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          jratajski@gmail.com

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable gameoflife
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9,
                                array> 0.5
  
  -- Directories containing source files.
  hs-source-dirs:      src/main/eta
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
